--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,7 @@ phases:
   install:
      commands:
          - sam package --template-file template.yaml --s3-bucket aruntestbucket-123 --output-template-file packaged.yaml
-         - sam deploy --template-file packaged.yaml --stack-name mySafeDeploytestStack --capabilities CAPABILITY_IAM
+         #- sam deploy --template-file packaged.yaml --stack-name mySafeDeploytestStack --capabilities CAPABILITY_IAM
 artifacts:
    type: zip
    files:
